# Cypher

./: '  .gitignore  2  CMakeCache.txt  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeLists.txt  CMakeListsa.txt~  Gengine  Makefile  Repository_Expectations.txt  ScenePlan.txt  build  cmake_install.cmake  cypher-launcher.lnk  imgui.ini  index.cpp  note.md  vimfutre.txt
cypher-engine/: CMakeLists.txt  imgui.ini
cypher-engine/data/Shaders/debug/: debug.fs  debug.vs
cypher-engine/include/glad/: glad.h
cypher-engine/src/Core/: Application.cpp  Application.h  index.cpp
cypher-engine/src/Graphics/: Archetype.h  ArchetypeManager.h  Buffer.h  Camera.h  ComponentManager.h  Container.h  EntityManager.cpp  EntityManager.h  FileReader.cpp  FileReader.h  FrameBuffer.h  GUI.cpp  GUI.h  GUIChildComponent.cpp  GUIChildComponent.h  GUIComponent.cpp  GUIComponent.h  Iterators.h  Model.cpp  ModelLoader.h  ObjectInfo.h  Primitives.h  RenderAPI.cpp  RenderAPI.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  SceneNode.h  Shader.cpp  Shader.h  SystemManager.cpp  SystemManager.h
cypher-launcher/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.manifest
cypher-launcher/Services/: AppPaths.cs
cypher-launcher/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
cypher-launcher/Views/: CreateProjectWindow.axaml  CreateProjectWindow.axaml'.cs  CreateProjectWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
data/Models/Duck/: README.md
data/Models/mic/: license.txt  scene.gltf
data/Models/room/: license.txt  scene.gltf
data/Models/room1/: license.txt  scene.gltf
data/Shaders/: simpleModel.fs  vertex.vs
data/Shaders/DEBUG_VAO_DEBUG_SHADER/: debug.fs
data/Shaders/debug/: debug.cs  debug.fs  debug.vs
docs/: structure.txt  stuff
extras/: SimpleFragmentShader.glsl  SimpleVertexShader.glsl  boxFragment.fs  fragment.fs  lightBoxVertex.vs  vertex.vs
googletest/: CTestTestfile.cmake
imgui-subbuild/: CMakeCache.txt  CMakeLists.txt
imgui-subbuild/imgui-populate-prefix/src/imgui-populate-stamp/: download-imgui-populate.cmake  extract-imgui-populate.cmake  imgui-populate-urlinfo.txt
imgui-subbuild/imgui-populate-prefix/tmp/: imgui-populate-mkdirs.cmake
include/: GLCanvas.h
include/Graphics/: GLCanvas.h  Mesh.h  Renderer.h  Shader.h
include/glad/: glad.h
libs/: glad.c
libs/STB_IMAGE/: stb_image.cpp
notes/: .Notes.txt.swp  Notes.txt
renderdoc_captures/: no_buff.rdc
src/Core/: Application.cpp  Application.h  index.cpp
src/Graphics/: .Camera.cpp.swp  .Camera.h.swp  .FileReader.cpp.swp  .FileReader.h.swo  .FileReader.h.swp  .FrameBuffer.cpp.swp  .GLCanvas.h.swp  .GLFWCanvas.cpp.swp  .GLFWCanvas.h.swp  .GUI.cpp.swp  .GUI.h.swp  .GUIComponent.cpp.swp  .GUIComponent.h.swp  .Mesh.cpp.swo  .Mesh.cpp.swp  .Mesh.h.swp  .Model.cpp.swp  .Model.h.swp  .RenderAPI.cpp.swp  .RenderAPI.h.swp  .RenderBatch.h.swp  .Renderer.cpp.swo  .Renderer.cpp.swp  .Renderer.h.swp  .ResourceManager.cpp.swp  .ResourceManager.h.swp  .Shader.cpp.swn  .Shader.cpp.swo  .Shader.cpp.swp  .Shader.h.swp  .ShaderLoaderPlan.txt.swp  .System.cpp.swp  .index.cpp.swp  Application.cpp  Application.h  Archetype.h  ArchetypeManager.h  Camera.cpp  Camera.h  ComponentManager.cpp  (+51 more)
tools/: build
view/: Window.cpp  a.out
